# twinkle-linux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  glm  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: USER_GUIDE.md
packaging/: 99-twinkle-i2c.rules  twinkle-linux.desktop
packaging/flatpak/: com.github.twinkle-twinkle.TwinkleLinux.yml
packaging/snap/: snapcraft.yaml
plans/: architecture-design.md
scripts/: install-udev-rules.sh  install-user.sh  install.sh  uninstall-user.sh  uninstall.sh
src/: __init__.py  main.py
src/core/: __init__.py  app.py  config.py  logging.py
src/ddc/: __init__.py  command.py  ddc_manager.py  exceptions.py  monitor.py  vcp_codes.py
src/services/: __init__.py
src/ui/: __init__.py  brightness_popup.py  ui_main.py
src/ui/resources/styles/: default.qss
src/ui/widgets/: __init__.py  brightness_slider.py  settings_dialog.py  vcp_controls.py
src/utils/: __init__.py
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
twinkle-cpp/: CMakeLists.txt  README.md
twinkle-cpp/include/twinkle/core/: config_manager.hpp  logger.hpp
twinkle-cpp/include/twinkle/ddc/: command_executor.hpp  ddc_manager.hpp  error.hpp  monitor.hpp  vcp_codes.hpp
twinkle-cpp/include/twinkle/ui/: brightness_popup.hpp  tray_icon.hpp
twinkle-cpp/include/twinkle/ui/widgets/: brightness_slider.hpp  settings_dialog.hpp
twinkle-cpp/src/: main.cpp
twinkle-cpp/src/core/: config_manager.cpp  logger.cpp
twinkle-cpp/src/ddc/: command_executor.cpp  ddc_manager.cpp  monitor.cpp
twinkle-cpp/src/ui/: brightness_popup.cpp  tray_icon.cpp
twinkle-cpp/src/ui/widgets/: brightness_slider.cpp  settings_dialog.cpp
twinkle-cpp/tests/: CMakeLists.txt
twinkle-rust/: .cross.toml  CROSS_COMPILE.md  Cargo.toml  Dockerfile.cross  IMPLEMENTATION_SUMMARY.md  README.md  cross-build.sh
twinkle-rust/src/: lib.rs  main.rs
twinkle-rust/src/core/: config.rs  mod.rs
twinkle-rust/src/ddc/: command.rs  ddc_manager.rs  error.rs  mod.rs  monitor.rs  vcp_codes.rs
twinkle-rust/src/ui/: brightness_popup.rs  mod.rs  tray_icon.rs
twinkle-rust/src/ui/widgets/: brightness_slider.rs  mod.rs  settings_dialog.rs  vcp_controls.rs
twinkle-rust/src/utils/: mod.rs
