[package]
name = "twinkle-linux"
version = "0.1.0"
edition = "2021"
authors = ["Twinkle Linux Contributors"]
description = "GUI application for controlling external monitor brightness via DDC/CI on Linux"
license = "MIT"
repository = "https://github.com/twinkle-twinkle/twinkle-linux"
readme = "../README.md"
keywords = ["ddc", "monitor", "brightness", "linux", "gtk"]
categories = ["gui", "hardware-support"]

[dependencies]
# GTK and system tray
gtk4 = "0.9"
gio = "0.20"
glib = "0.20"
libappindicator = "0.9"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Command execution
shell-words = "1.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
directories = "5.0"

# Utilities
once_cell = "1.19"
regex = "1.11"

[dev-dependencies]
tempfile = "3.13"

[[bin]]
name = "twinkle-linux"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
